@@ -1,6 +1,7 @@
 pov-simple-backup (0.2) UNRELEASED; urgency=low
 
   * New option: -s (skip existing backup files).
+  * New option: -S (estimate backup size).
   * New commands: back_up_mysql, rsync_to, rsync_backup_to, scp_backup_to.
   * copy_backup_to uses rsync instead of scp.
 
